Fix table border on mobile.

--- a/src/sass/mys-correspondence.scss
+++ b/src/sass/mys-correspondence.scss
@@ -48,8 +48,8 @@
 position: relative;
     }
 
-    tr {
-      margin-bottom   : 0px;
+    tr:not(:last-child) {
+      margin-bottom: 0px;
       border-bottom: none;
     }
 
